# trial_atualizado

./: README.md  pyproject.toml  requirements.txt
log/A2C_1/: events.out.tfevents.1777555463.DESKTOP-78GTFU5.12848.0
log/A2C_2/: events.out.tfevents.1777555833.DESKTOP-78GTFU5.11272.0
trading_log/A2C_0/: events.out.tfevents.1777555833.DESKTOP-78GTFU5.11272.1  events.out.tfevents.1777556312.DESKTOP-78GTFU5.11272.2  events.out.tfevents.1777557592.DESKTOP-78GTFU5.11272.3  events.out.tfevents.1777559710.DESKTOP-78GTFU5.11272.4  events.out.tfevents.1777562544.DESKTOP-78GTFU5.11272.5  events.out.tfevents.1777564350.DESKTOP-78GTFU5.11272.6
trials/empyrical/: utils.py
trials/networks/: callbacks.py  env.py  feature_extractor.py  policy_network.py
trials/preprocess/: U.S.SP500-selected.py  random_stocks_selected.py  rolling.py
trials/scripts/: cointegration_rein.py  eval_cointegration.py  select_pairs.py  test_indicators.py  test_trials.py  train_trials.py  util.py
