[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
absl-py = "1.2.0"
brotlipy = "0.7.0"
cachetools = "5.2.0"
certifi = "2022.9.24"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
click = "8.1.3"
cloudpickle = "2.2.0"
colorama = "0.4.5"
cryptography = "37.0.4"
cycler = "0.11.0"
docker-pycreds = "0.4.0"
dpcpp-cpp-rt = "2022.2.0"
empyrical = "0.5.5"
fonttools = "4.37.4"
gitdb = "4.0.9"
gitpython = "3.1.29"
google-auth = "2.12.0"
google-auth-oauthlib = "0.4.6"
grpcio = "1.49.1"
gym = "0.21.0"
idna = "3.4"
importlib-metadata = "4.13.0"
intel-cmplr-lic-rt = "2022.2.0"
intel-openmp = "2022.2.0"
kiwisolver = "1.4.4"
loguru = "0.6.0"
lxml = "4.9.1"
markdown = "3.4.1"
markupsafe = "2.1.1"
matplotlib = "3.5.3"
mkl = "2022.2.0"
mkl-random = "1.2.2"
mkl-service = "2.4.0"
numpy = "1.23.4"
oauthlib = "3.2.1"
packaging = "21.3"
pandas = "1.5.0"
pandas-datareader = "0.10.0"
pathtools = "0.1.2"
patsy = "0.5.3"
pillow = "9.2.0"
plotly = "5.10.0"
promise = "2.3"
protobuf = "3.19.6"
psutil = "5.9.2"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycparser = "2.21"
pynvml = "11.4.1"
pyopenssl = "22.0.0"
pyparsing = "3.0.9"
pysocks = "1.7.1"
python-dateutil = "2.8.2"
pytz = "2022.4"
pyyaml = "6.0"
requests = "2.28.1"
requests-oauthlib = "1.3.1"
rsa = "4.9"
scipy = "1.9.2"
sentry-sdk = "1.9.10"
setproctitle = "1.3.2"
setuptools-scm = "6.4.2"
shortuuid = "1.0.9"
six = "1.16.0"
smmap = "5.0.0"
stable-baselines3 = "1.6.2"
statsmodels = "0.13.2"
tbb = "2021.7.0"
tenacity = "8.1.0"
tensorboard = "2.10.1"
tensorboard-data-server = "0.6.1"
tensorboard-plugin-wit = "1.8.1"
tomli = "2.0.1"
torch = "1.12.1"
typer = "0.6.1"
typing-extensions = "4.4.0"
urllib3 = "1.26.12"
wandb = "0.13.4"
werkzeug = "2.2.2"
win32-setctime = "1.1.0"
zipp = "3.9.0"

[[tool.poetry.source]]
name = "simple"
url = "https://mirrors.cloud.tencent.com/pypi/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
